# scrapyon

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml
scrapyon/: __init__.py  _agent.py  _helpers.py  _logging.py  agent.py  helpers.py  launch.jinja  prompt.py  scrape.jinja  tools.py
scrapyon/prompts/: launch.jinja  scrape.jinja
scrapyon/tools/: __init__.py  base.py
