[project]
name = "scrapyon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "httpx==0.27.2",
    "jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "playwright>=1.49.1",
    "pydantic>=2.10.3",
    "scrapybara>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
